--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "animate.css": "^3.7.2",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "echarts": "^4.2.1",
     "element-ui": "^2.11.1",
     "font-awesome": "^4.7.0",
     "vue": "^2.6.10",
+    "vue-monoplasty-slide-verify": "^1.0.5",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
